Closed Bug 1743611 Opened 4 years ago Closed 4 years ago

[VA-API] Crash in [@ __GI___uname]

Categories

(Core :: Security: Process Sandboxing, defect, P1)

defect

Tracking

()

RESOLVED FIXED
97 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox94 --- unaffected
firefox95 --- unaffected
firefox96 --- disabled
firefox97 --- fixed

People

(Reporter: gsvelto, Assigned: jld)

References

(Blocks 1 open bug)

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

Crash report: https://crash-stats.mozilla.org/report/index/58cd4e44-700b-49d5-921c-bc17f0211130

Reason: SIGSYS

Top 10 frames of crashing thread:

0 libc.so.6 __GI___uname 
1 libgallium_drv_video.so libgallium_drv_video.so@0x3e7508 
2 firefox-bin calloc memory/build/malloc_decls.h:52
3 firefox-bin arena_t::MallocLarge memory/build/mozjemalloc.cpp:3039
4 firefox-bin arena_t::MallocLarge memory/build/mozjemalloc.cpp:3039
5 firefox-bin calloc memory/build/malloc_decls.h:52
6 libgallium_drv_video.so libgallium_drv_video.so@0x87ffe0 
7 libc.so.6 __realpath /build/glibc-S9d2JN/glibc-2.27/stdlib/canonicalize.c:218
8 libc.so.6 getenv /build/glibc-S9d2JN/glibc-2.27/stdlib/getenv.c:35
9  @0x7fbce29741e7 

Recent mesa is calling uname() to populate the driver name with the kernel version, hence this crash.

Assignee: nobody → jld
Summary: Crash in [@ __GI___uname] → [VA-API] Crash in [@ __GI___uname]

Another signature with SIGSYS 0x000000000000003f.

Crash Signature: [@ __GI___uname] → [@ __GI___uname] [@ libc.so.6@0xd7e67 | libgallium_drv_video.so@0x51a093 ]
Crash Signature: [@ __GI___uname] [@ libc.so.6@0xd7e67 | libgallium_drv_video.so@0x51a093 ] → [@ __GI___uname] [@ __GI_uname] [@ libc.so.6@0xd7e67 | libgallium_drv_video.so@0x51a093 ]

Mesa wants to see the OS version, and this is relatively harmless.

Priority: -- → P1
Pushed by jedavis@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/bbfee13c45ee Allow uname in the RDD process sandbox. r=gcp
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 97 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: