Bug 1743611 - Allow uname in the RDD process sandbox. r=gcp

Mesa wants to see the OS version, and this is relatively harmless.

Differential Revision: https://phabricator.services.mozilla.com/D133714